--- a/angular/core/css/1_lmo_md.scss
+++ b/angular/core/css/1_lmo_md.scss
@@ -49,6 +49,10 @@ md-input-container textarea {
   }
 }
 
+.md-no-errors {
+  .md-errors-spacer { display: none; }
+}
+
 .md-datepicker-input {
   font-size: 16px !important;
 }
